<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="soe.boe.eis.thparkplatzapp.MainActivity" >

    <TextView
        android:id="@+id/tvLoginMailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/mailaddresse" />

    <EditText
        android:id="@+id/edLoginMailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvLoginMailAddress"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tvLoginPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edLoginMailAddress"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/password" />

    <EditText
        android:id="@+id/edLoginPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvLoginPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btLoginLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edLoginPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="loginBT"
        android:text="@string/login" />

    <Button
        android:id="@+id/btLoginRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btLoginLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="registrationBT"
        android:text="@string/registration" />

    <Button
        android:id="@+id/btLoginPasswordForget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btLoginRegistration"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="passwordForgetBT"
        android:text="@string/forgotPassword" />

</RelativeLayout>
