<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="soe.boe.eis.thparkplatzapp.MainActivity" >

    <TextView
        android:id="@+id/tvRegistrationChooseGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/chooseUserGroup" />

    <Spinner
        android:id="@+id/spRegistrationChooseGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvRegistrationChooseGroup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" />

    <Button
        android:id="@+id/btRegistrationEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spRegistrationChooseGroup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:onClick="registrationBT"
        android:text="@string/regis" />

    <Button
        android:id="@+id/btRegistrationBack3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btRegistrationEnd"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/back" />

</RelativeLayout>
